--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -30,14 +30,18 @@ h6 {
     letter-spacing: 1px;
 }
 
-p {
+section h1, section h2 { color: #FFFFFF; }
+section h3 { color: #C1FFFF; }
+section h4 { color: #8FFFF0; }
+
+p, img {
     margin: 0 0 25px;
     font-size: 18px;
     line-height: 1.5;
 }
 
 @media(min-width:768px) {
-    p {
+    p, img {
         margin: 0 0 35px;
         font-size: 20px;
         line-height: 1.6;
@@ -147,13 +151,15 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/beach_bg_.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
 }
+
+.intro.beach { background: url(../img/beach_bg.jpg) no-repeat bottom center scroll; }
+.intro.trees { background: url(../img/trees_bg.jpg) no-repeat bottom center scroll; }
 
 .intro .intro-body {
     display: table-cell;
@@ -166,6 +172,10 @@ a:focus {
 
 .intro .intro-body .intro-text {
     font-size: 18px;
+}
+
+section img {
+    width: 100%;
 }
 
 @media(min-width:768px) {
@@ -261,27 +271,10 @@ a:focus {
     padding-top: 100px;
 }
 
-.download-section {
-    width: 100%;
-    padding: 50px 0;
-    color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-    background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-
-#map {
-    width: 100%;
-    height: 200px;
-    margin-top: 100px;
-}
-
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 200px;
+        padding-bottom: 200px;
     }
 
     .download-section {
