--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 35px;
+    margin: 1.5em 0 .5em;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
@@ -34,15 +34,17 @@ section h1, section h2 { color: #FFFFFF; }
 section h3 { color: #C1FFFF; }
 section h4 { color: #8FFFF0; }
 
-p, img {
-    margin: 0 0 25px;
+p, .image {
+    margin: 0 0 1em 0;
     font-size: 18px;
     line-height: 1.5;
 }
+.image {     
+    margin: 0 0 2em 0;
+}
 
 @media(min-width:768px) {
-    p, img {
-        margin: 0 0 35px;
+    p, .image {
         font-size: 20px;
         line-height: 1.6;
     }
@@ -158,8 +160,8 @@ a:focus {
     -o-background-size: cover;
 }
 
-.intro.beach { background: url(../img/beach_bg.jpg) no-repeat bottom center scroll; }
-.intro.trees { background: url(../img/trees_bg.jpg) no-repeat bottom center scroll; }
+.intro.beach { background: url(../img/_beach_bg.jpg) no-repeat bottom center scroll; }
+.intro.trees { background: url(../img/_trees_bg.jpg) no-repeat bottom center scroll; }
 
 .intro .intro-body {
     display: table-cell;
@@ -174,8 +176,60 @@ a:focus {
     font-size: 18px;
 }
 
-section img {
+section .image {
     width: 100%;
+    position: relative;
+}
+
+section .image.halfsie {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media(min-width:768px) {
+    section .image {
+        -webkit-filter: grayscale(100%);
+        filter: grayscale(100%);
+        -webkit-transition: .3s ease-in-out;
+        transition: .3s ease-in-out;
+    }
+    section .image:hover {
+        -webkit-filter: grayscale(0);
+        filter: grayscale(0);
+    }
+}
+
+.image img {
+    width: 100%;
+}
+
+.image span {
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    position: absolute;
+    bottom: -1.5em;
+    left: 0;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-size: .75em;
+    text-decoration: none;
+    text-align: center;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+
+@media(min-width:768px) {
+    .image span {
+        opacity: 0;
+        bottom: 0;
+    }
+    .image:hover span {
+        bottom: -1.5em;
+        opacity: 1;
+    }
 }
 
 @media(min-width:768px) {
@@ -275,15 +329,6 @@ section img {
     .content-section {
         padding-top: 200px;
         padding-bottom: 200px;
-    }
-
-    .download-section {
-        padding: 100px 0;
-    }
-
-    #map {
-        height: 400px;
-        margin-top: 250px;
     }
 }
 
